--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "author": "Mike Baldwin",
   "license": "ISC",
-
-  "devDependencies": {
-    "jquery": "1.9.1",
+  "dependencies": {
+    "bootbox": "^4.4.0",
     "bootstrap-sass": "3.3.6",
     "gsap": "1.18.5",
+    "jquery": "1.9.1",
     "scrollmagic": "2.0.5"
   }
 }
